fix(Media): Fix scrollbar and mobile media offset

--- a/layouts/chat/Chat.less
+++ b/layouts/chat/Chat.less
@@ -22,7 +22,7 @@
   .media-open {
     padding-top: @media_open_offset;
     &::-webkit-scrollbar-track {
-      margin-top: @media_open_offset;
+      margin-top: @media_open_offset !important;
     }
   }
 }
